Bug 388953 - Apply filters on folder doesn't work anymore
Summary: Apply filters on folder doesn't work anymore
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 5.7.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-14 11:14 UTC by Olivier Churlaud
Modified: 2018-01-15 12:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Churlaud 2018-01-14 11:14:29 UTC
The option
   Folder > Apply Filters on folder > Apply all filters 
doesn't work anymore. Nothing happens.

As a workaround, I select all messages in the folder, and do 
   Message > Apply filter > Apply all filters
Comment 1 Laurent Montel 2018-01-15 12:50:49 UTC
Git commit e0c1bf6570537086628d455cab22c802d663344d by Laurent Montel.
Committed on 15/01/2018 at 12:50.
Pushed by mlaurent into branch 'Applications/17.12'.

Fix Bug 388953 - Apply filters on folder doesn't work anymore

FIXED-IN: 5.7.2

M  +2    -2    src/kmmainwidget.cpp

https://commits.kde.org/kmail/e0c1bf6570537086628d455cab22c802d663344d