Fix Bug 388953 - Apply filters on folder doesn't work anymore

FIXED-IN: 5.7.2
BUG: 388953